# selfish

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  dune-project  selfish.opam
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  unit-test.yml
lib/: dune
lib/builtin/: cd.ml  dune  echo.ml  exit.ml  os.ml  pwd.ml  selfish.ml
test/: dune
