opam-version: "2.0"
name: "selfish"
version: "0.0.1"
synopsis: "selfish - the shell dyed in your selfish colors."
description: "selfish - the shell dyed in your selfish colors."
maintainer: "Naohiro CHIKAMATSU <n.chika156@gmail.com>"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0"}
]