opam-version: "2.0"
name: "selfish"
version: "0.0.1"
maintainer: ["Naohiro CHIKAMATSU <n.chika156@gmail.com>"]
authors: ["Naohiro CHIKAMATSU <n.chika156@gmail.com>"]
synopsis: "selfish - the shell dyed in your selfish colors."
description: "selfish - the shell dyed in your selfish colors."
homepage: "https://github.com/nao1215/selfish"
bug-reports: "https://github.com/nao1215/selfish/issues"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
install: [
  ["dune" "install"]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0"}
]